fix badge text color on dark mode

--- a/stylesheets/commons/TeamParticipantCard.scss
+++ b/stylesheets/commons/TeamParticipantCard.scss
@@ -248,6 +248,7 @@ $compact-selector: '[data-switch-group="team-cards-compact"]';
 
 		.theme--dark & {
 			background-color: var( --clr-on-surface-dark-primary-4 );
+			color: var( --clr-secondary-90 );
 		}
 	}
 
